assets/css/style.css
/* Style Reset Rule */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Root Variables */
:root {
    --card-bg-primary: #0F0E17;
    --title-color-primary: #E53170;
    --email-link-color: #42B5EE;
    --email-link-hover:rgb(150, 212, 243);

    /* Generic Colors */
    --color-white: white;

    /* Fonts Variables */
    --main-title: 'Lilita One', cursive;
    --main-card-title: 'Montserrat Alternates', sans-serif;
    --content-font: 'Ubuntu', sans-serif;
}

/* ---- CSS Design Page Begin ---- */

/* Main Tags */
body {
    font-family: var(--content-font);
    margin: 0 auto;
    width: 75%;
}

img {
    height: 100px;
    float: left;
}

a {
    color: var(--email-link-color);
    text-decoration: none;
    font-size: 0.9rem;
    display: block;
}

    /* Header Section */
    header {
        margin: 50px 0 20px 0;
        text-align: center;
    }

    h1 {
        color: var(--title-color-primary);
        font-family: var(--main-title);
    }

    p {
        margin: 40px 0 0 0;
        font-weight: 400;
        line-height: 1.3rem;
    }

/* Main Content Section */
.cards-column {
    float: left;
    width: 33.33%;
    padding: 20px 15px;
    height: 300px; /* Should be removed. Only for demonstration */
}

.card-item {
    height: 100px; /* Should be removed. Only for demonstration */
    margin: 20px 0 50px 0;
    background-color: var(--card-bg-primary);
    box-shadow: 5px 10px 18px #888888;
    color: var(--color-white);
}

.card-title {
    font-family: var(--main-card-title);
}

/* Little Decoration Mail Link */
.mail-link:hover {
    color: var(--email-link-hover);
}

/* Clearfix Float Rule */
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}

